[project]
name = "scikit-fda"
description = "Functional Data Analysis Python package."
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE.txt"}
keywords = [
	"functional data",
	"statistics",
	"machine learning",
]
maintainers = [
  {name = "Carlos Ramos Carreño", email = "vnmabus@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dynamic = ["version"]

dependencies = [
	"dcor",
	"fdasrsf>=2.2.0, !=2.5.7",
	"findiff",
	"lazy_loader",
	"matplotlib",
	"multimethod>=1.5, !=1.11, != 1.11.1",
	"numpy>=1.16",
	"pandas>=1.0",
	"rdata",
	"scikit-datasets[cran]>=0.2.2",
	"scikit-learn>=0.20",
	"scipy>=1.6.0",
	"typing-extensions",
]

[project.optional-dependencies]
docs = [
  "cartopy",
  "ipykernel",
  "jupyter-sphinx",
  "myst-parser",
  "pillow",
  "pydata-sphinx-theme",
  "pytest",
  "setuptools>=41.2",
  "sphinx>=3",
  "sphinx-gallery",
  "sphinxcontrib-bibtex",
]
test = [
  "numpy>=2", # Changes in array representation.
  "pytest",
  "pytest-env",
  "pytest-subtests",
  "scipy>=1.14", # Changes in sparse array representation.
]

[project.urls]
homepage = "https://github.com/GAA-UAM/scikit-fda"
documentation = "https://fda.readthedocs.io"
repository = "https://github.com/GAA-UAM/scikit-fda"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
	"ANN101", # self does not need to be typed
	"D212", # incompatible with D213, which is our preferred style for multiline docstrings
	"Q003", # do not change quotation marks to avoid escaping
	"PLC0414", # allow explicit re-exports
	"S101", # assert is allowed
	"TID252", # relative imports allowed
]

[tool.ruff.lint.per-file-ignores]
"plot_*.py" = [
	"ANN", # no type hints in examples
	"ARG001", # Some unused args are needed
	"B018", # single object expressions are not useless in examples (they display the object)
	"D205", # examples do not have a blank line in docstring
	"D415", # first line in examples does not end with period
	"ERA001", # Commented code may be useful for the reader
	"S310", # URLs in examples have been validated
	"T201", # print allowed in examples
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 7

[tool.setuptools.packages.find]
include = ["skfda*"]

[tool.setuptools.dynamic]
version = {attr = "skfda.__version__"}
